--- a/bootstrap-email-miranda-stylesheet.css
+++ b/bootstrap-email-miranda-stylesheet.css
@@ -4,7 +4,7 @@
 :root {
     /* Declares variables for the basic colors for this UI */
     --main-background: #28262C;
-    --secondary-background: #042a2b;
+    --secondary-background: #10393a;
     --text-color: #EEF0F2;
 }
 
